fixed an accident in the changelog

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,14 +2,12 @@
  - fixed #61 (crash with ftb utils)
  - fixed #62 (crash with anything that tries to render)
 
-
 =============
 1.1.0
   - fixed #52
   - speed enchant now provides a raw speed increase instead of a potion effect
   - strength enchant gives raw damage increase/decrease instead of strength /weakness effect
   - unluck now randomly reduces the damage dealt by the affected creature, or increases the damage delt to it
-
 
 =============
 1.0.0
@@ -129,7 +127,7 @@ features:
   -metal transmutation
   -fertiliser made out of herba, that acts like bonemeal
   
-WARNING: this buildAnnotations might be (surely) completly broken in some way!
+WARNING: this build might be (surely) completly broken in some way!
 
 known issues:
  -formula damage values not fully implemented (required for later recipes)
