updated build, removed the research loader from the project

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 1.1.1
  - fixed #61 (crash with ftb utils)
  - fixed #62 (crash with anything that tries to render)
+ - the research loader is now an optional dependency
 
 =============
 1.1.0
